--- a/projektovy_denkoli/Test.html
+++ b/projektovy_denkoli/Test.html
@@ -167,6 +167,36 @@
         { question: "Vypočítej log₆(216/6)", correct: 2 },
         { question: "Vypočítej log₈(512/64)", correct: 1 },
         { question: "Vypočítej log₂(128/2)", correct: 6 },
+
+        { question: "Vypočítej log₆(216)", correct: 3 },
+  { question: "Vypočítej log₇(343)", correct: 3 },
+  { question: "Vypočítej log₂(32)", correct: 5 },
+  { question: "Vypočítej log₃(243)", correct: 5 },
+  { question: "Vypočítej log₁₀(1000)", correct: 3 },
+ 
+  { question: "Vypočítej log₂(16)", correct: 4 },
+  { question: "Vypočítej log₉(729)", correct: 3 },
+  { question: "Vypočítej log₂(256)", correct: 8 },
+  { question: "Vypočítej log₁₀(100000)", correct: 5 },
+  { question: "Vypočítej log₄(64)", correct: 3 },
+ 
+  { question: "Vyřeš log₂(x) = 4", correct: 16 },
+  { question: "Vyřeš log₃(x) = 5", correct: 243 },
+  { question: "Vyřeš log₅(x) = 2", correct: 25 },
+  { question: "Vyřeš log₄(x) = 3", correct: 64 },
+  { question: "Vyřeš log₇(x) = 1", correct: 7 },
+ 
+  { question: "Vyřeš log₂(3x − 2) = 4", correct: 6 },
+  { question: "Vyřeš log₅(x + 6) = 2", correct: 19 },
+  { question: "Vyřeš log(x) + log(x − 3) = log 28", correct: 7 },
+  { question: "Vyřeš log₃(x − 2) = 3", correct: 29 },
+  { question: "Vyřeš log₄(x) + log₄(x − 4) = 2", correct: 8 },
+ 
+  { question: "Vyřeš log₂(x + 2) − log₂(x − 2) = 2", correct: 6 },
+  { question: "Vyřeš log₉(x) = 1/2", correct: 3 },
+  { question: "Vyřeš log(x + 4) = 3", correct: 996 },
+  { question: "Vyřeš log(x − 2) + log(x − 6) = log 40", correct: 10 },
+  { question: "Vyřeš log₇(2x − 1) = log₇(3x − 8)", correct: 7 }
          
       ];
 
