--- a/projektovy_denkoli/Resene_priklady.html
+++ b/projektovy_denkoli/Resene_priklady.html
@@ -248,6 +248,174 @@
           correct: 4,
           solution: "log₄(64)=3 a log₄(4)=1 → 3+1=4.",
         },
+
+        {
+          question: "Vypočítej log₆(36)",
+          correct: 2,
+          solution: "36 = 6², takže log₆(36) = 2.",
+        },
+        {
+          question: "Vypočítej log₇(49)",
+          correct: 2,
+          solution: "49 = 7², takže log₇(49) = 2.",
+        },
+        {
+          question: "Vypočítej log₂(1)",
+          correct: 0,
+          solution: "1 = 2⁰, takže log₂(1) = 0.",
+        },
+        {
+          question: "Vypočítej log₃(81)",
+          correct: 4,
+          solution: "81 = 3⁴, takže log₃(81) = 4.",
+        },
+        {
+          question: "Vypočítej log₁₀(100)",
+          correct: 2,
+          solution: "100 = 10², takže log₁₀(100) = 2.",
+        },
+        {
+          question: "Vypočítej log₂(8)",
+          correct: 3,
+          solution: "8 = 2³, takže log₂(8) = 3.",
+        },
+        {
+          question: "Vypočítej log₉(81)",
+          correct: 2,
+          solution: "81 = 9², takže log₉(81) = 2.",
+        },
+        {
+          question: "Vypočítej log₂(64)",
+          correct: 6,
+          solution: "64 = 2⁶, takže log₂(64) = 6.",
+        },
+        {
+          question: "Vypočítej log₁₀(10000)",
+          correct: 4,
+          solution: "10000 = 10⁴, takže log₁₀(10000) = 4.",
+        },
+ 
+        {
+          question: "Vyřeš rovnici: log₂(x) = 3",
+          correct: 8,
+          solution: "2³ = 8, takže x = 8.",
+        },
+        {
+          question: "Vyřeš rovnici: log₃(x) = 4",
+          correct: 81,
+          solution: "3⁴ = 81, takže x = 81.",
+        },
+        {
+          question: "Vyřeš rovnici: log₅(x) = 1",
+          correct: 5,
+          solution: "5¹ = 5, takže x = 5.",
+        },
+        {
+          question: "Vyřeš rovnici: log₄(x) = 2",
+          correct: 16,
+          solution: "4² = 16, takže x = 16.",
+        },
+        {
+          question: "Vyřeš log₂(2x − 4) = 3",
+          correct: 6,
+          solution:
+            "Rovnici přepíšeme do exponenciální formy: 2x − 4 = 2³ = 8. Po sečtení dostaneme 2x = 12 a vydělením 2 získáme x = 6.",
+        },
+ 
+        {
+          question: "Vyřeš log₅(x + 4) = 2",
+          correct: 21,
+          solution:
+            "Logaritmus znamená: x + 4 = 5² = 25. Odečtením 4 získáme x = 21, což splňuje podmínku x + 4 > 0.",
+        },
+ 
+        {
+          question: "Vyřeš log(x) + log(x − 2) = log 15",
+          correct: 5,
+          solution:
+            "Sečteme logaritmy: log[x(x − 2)] = log 15 → tedy x(x − 2) = 15. Kvadratická rovnice dává kořeny 5 a −3, ale platí jen x > 2, takže x = 5.",
+        },
+ 
+        {
+          question: "Vyřeš log₃(x − 1) = 2",
+          correct: 10,
+          solution:
+            "Převedeme logaritmus: x − 1 = 3² = 9. Přičtením 1 dostaneme x = 10, což vyhovuje podmínce x − 1 > 0.",
+        },
+ 
+        {
+          question: "Vyřeš log₄(x) + log₄(x − 3) = 1",
+          correct: 4,
+          solution:
+            "Sjednotíme logaritmy: log₄[x(x − 3)] = 1, tedy x(x − 3) = 4¹ = 4. Řešení jsou 4 a −1, ale logaritmus vyžaduje x > 3 → správné x = 4.",
+        },
+ 
+        {
+          question: "Vyřeš log₂(x + 1) − log₂(x − 1) = 1",
+          correct: 3,
+          solution:
+            "Použijeme rozdíl logaritmů: log₂[(x+1)/(x−1)] = 1 → (x+1)/(x−1) = 2¹ = 2. Rovnice dá x = 3, které splňuje podmínku x − 1 > 0.",
+        },
+ 
+        {
+          question: "Vyřeš log₉(x) = 1/2",
+          correct: 3,
+          solution:
+            "Převedeme logaritmus: x = 9^(1/2). Druhá odmocnina z 9 je 3, takže x = 3.",
+        },
+ 
+        {
+          question: "Vyřeš log(x + 9) = 2",
+          correct: 91,
+          solution:
+            "Převod: x + 9 = 10² = 100. Odečtením 9 dostáváme x = 91, což splňuje podmínku x + 9 > 0.",
+        },
+ 
+        {
+          question: "Vyřeš log(x − 1) + log(x − 5) = log 12",
+          correct: 7,
+          solution:
+            "Spojíme logaritmy: log[(x−1)(x−5)] = log 12 → (x−1)(x−5) = 12. Kvadratická rovnice dává kořeny 7 a −1, ale platí podmínky x>5, takže x = 7.",
+        },
+        {
+          question: "Vyřeš log₁₀(x + 1) = log₁₀(9)",
+          correct: 8,
+          solution:
+            "Stejný základ logaritmů → argumenty se rovnají: x + 1 = 9. Odečteme 1 → x = 8.",
+        },
+ 
+        {
+          question: "Vyřeš log₂(x − 3) = log₂(5)",
+          correct: 8,
+          solution: "Stejný základ → x − 3 = 5. Po úpravě dostáváme x = 8.",
+        },
+ 
+        {
+          question: "Vyřeš log₅(x + 4) = log₅(29)",
+          correct: 25,
+          solution: "Argumenty se musí rovnat: x + 4 = 29. Řešením je x = 25.",
+        },
+ 
+        {
+          question: "Vyřeš 2·log₁₀(x) = log₁₀(100)",
+          correct: 10,
+          solution:
+            "2·log(x) = log(x²), tedy log(x²) = 2. Z toho x² = 100 → x = 10 (kladná podmínka).",
+        },
+ 
+        {
+          question: "Vyřeš 3·log₁₀(x) = log₁₀(1000)",
+          correct: 10,
+          solution:
+            "3·log(x) = log(x³). Dostáváme log(x³) = 3 → x³ = 1000 → x = 10.",
+        },
+ 
+        {
+          question: "Vyřeš log₃(2x − 1) = log₃(x + 8)",
+          correct: 9,
+          solution:
+            "Porovnáme argumenty: 2x − 1 = x + 8. Upravením dostaneme x = 9.",
+        }
       ];
 
       function shuffle(array) {
